<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IPTVapp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="close">关闭</string>
	<string name="exit">退 出</string>
	<string name="choosecitytitle">切换城市</string>
	<string name="choosecommunity">社区选择</string>
	<string name="myshoppingcart">我的购物车</string>
	<string name="enablelocator">开启定位城市</string>
	<string name="locatecity">定位城市</string>
	<string name="locatecommunity">定位社区</string>
	<string name="hotcity">热门城市</string>
	<string name="communities">社区列表</string>
	<string name="intelligencelife">智慧生活</string>
	<string name="stores">周边店</string>
	<string name="hint01">输入城市名称</string>
		<string name="hint_community">输入社区名称</string>
	<string name="hint02">请输入类别名称或关键字</string>
	<string name="hint03">请输入要查找的内容</string>
	<string name="usernameHint">手机/邮箱/用户名</string>
	<string name="passwordHint">密码</string>
	<string name="homepage">首页</string>
	<string name="surround">周边</string>
	<string name="merchandize">商品</string>
	<string name="cart">购物车</string>
	<string name="mine">我的</string>
	<string name="other">其他</string>
	<string name="more">更多</string>
	<string name="communityConvenient">社区便利</string>
	<string name="all">全部</string>
	<string name="wholecity">全城</string>
	<string name="defaultorder">默认排序</string>
	<string name="search">搜索</string>
	<string name="notLoginYet">您还没有登录哦~</string>
	<string name="loginnow">马上登录</string>
	<string name="login">登录</string>
	<string name="userRegister">用户注册</string>
	<string name="submit">提  交</string>
	<string name="forgotpsw">忘记密码</string>
	<string name="freeRegister">免费注册</string>
	<string name="userOtherAccount">使用合作网站账号登录</string>
	<string name="buyNow">立即抢购</string>
	<string name="checkDetail">查看详情</string>
	<string name="cashierAlipay">收银台-高端版-支付宝</string>
	<string name="cashier">收银台</string>
	<string name="prodName">商品名称：</string>
	<string name="from">来自：</string>
	<string name="boundToPay">应付总价：</string>
	<string name="$">元</string>
	<string name="recommendUseAlipay">如果您还没有支付宝，推荐您使用</string>
	<string name="bankCardConvenient">储蓄卡快捷支付</string>
	<string name="creditCardConvenient">信用卡快捷支付</string>
	<string name="payWithAlipayAccount">支付宝账号支付</string>
	<string name="alipayAccount">支付宝账户名</string>
	<string name="payCombination">支付密码</string>
	<string name="retrieveCombination">找回密码</string>
	<string name="recommend">( 推荐 )</string>
	<string name="pay">确认支付</string>
	<string name="cancel">取消</string>
	<string name="orderConfirmation">确认订单</string>
	<string name="orderConfirmationNpay">确认订单，付款</string>
	<string name="purchaseQuantity">购买数量</string>
	<string name="useFavor">使用优惠</string>
	<string name="finalPay">最终应付</string>
	<string name="cellPhoneNum">手机号码</string>
	<string name="packageChoose">套餐选择</string>
	<string name="pleaseChoose">请选择您需要的套餐：</string>
	<string name="choosePayWay">选择支付方式</string>
	<string name="myAccount">我的账户</string>
	<string name="myCollection">我的收藏</string>
	<string name="comingSoon">即将到来</string>
	<string name="inputYourPhoneNum">输入手机号</string>
	<string name="setupPasswor">设置密码</string>
	<string name="pwdHint">由6到18位数字,字母或组成</string>
	<string name="pwdConfirmation">确认密码</string>
	<string name="repwdHint">与密码一致</string>
	<string name="rememberMe">记住我</string>
	<string name="autoLogin">自动登录</string>
	<string name="registerVerify">注册验证</string>
	<string name="veriCode">验证码</string>
	<string name="inputVeriCode">输入收到的验证码</string>
	<string name="inputPhoneNum">输入手机号</string>
	<string name="inputNewPwd">输入新密码</string>
	<string name="inputNewPwdAgain">再次输入新密码</string>
	<string name="affirmative">确 定</string>
	<string name="retrievePassword_step1">找回密码 1</string>
	<string name="retrievePassword_step2">找回密码 2</string>
	<string name="retrievePassword_step3">找回密码 3</string>
	<string name="resendVeriCode">重新发送</string>
	<string name="modifyPassword">修改密码</string>
	<string name="oldPassword">原密码</string>
	<string name="inputOldPassword">输入您原先密码</string>
	<string name="appMap">地图</string>
	<string name="clearShoppingCart">清空购物车</string>
	<string name="detail">详情</string>
	<string name="delete">删除</string>
	<string name="forwardtopay">前去支付</string>
</resources>