<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3f3"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/uniform_titlebar_style"
        android:padding="5dp" >

        <Button
            android:id="@+id/button1"
            style="@style/title_text_style"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:background="@drawable/selector_top_button"
            android:text="@string/close"
            android:textSize="@dimen/font_size_s" />

        <Button
            android:id="@+id/button2"
            style="@style/title_text_style"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_top_button"
            android:text="@string/forgotpsw"
            android:textSize="@dimen/font_size_s" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/login"
            style="@style/title_text_style"
            android:textSize="20sp" />

    </RelativeLayout>
     <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#8bbb" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@drawable/bg_extremely_low_grey_gradient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingLeft="19dp"
        android:paddingRight="19dp"
        android:paddingTop="12dp" >

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="12dp" >

        <EditText
            android:id="@+id/editText1"
             style="@style/loginEditTextStyle"
            android:drawableLeft="@android:drawable/ic_btn_speak_now"
            android:hint="@string/usernameHint"
            android:maxLength="11"
            />

            <requestFocus />
              <ImageButton
            android:id="@+id/imageButton1"
         style="@style/textDisposerStyle"/>
	</RelativeLayout>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="12dp" >

        <EditText
            android:id="@+id/editText2"
            style="@style/loginEditTextStyle"
          	android:drawableLeft="@android:drawable/ic_secure"
            android:hint="@string/passwordHint"
            android:paddingLeft="12dp"
            android:inputType="textPassword">
        </EditText>
          <ImageButton
            android:id="@+id/imageButton2"
          style="@style/textDisposerStyle"/>
        </RelativeLayout>

	<FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<CheckedTextView
		    android:id="@+id/checkedTextView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:checkMark="@drawable/selector_checkable_text"
		    android:checked="false"
		    android:clickable="true"
		    android:gravity="center"
		    android:padding="5dp"
		    android:text="@string/rememberMe" />

		<CheckedTextView
		    android:id="@+id/checkedTextView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="right"
		    android:layout_marginRight="5dp"
		    android:checkMark="@drawable/selector_checkable_text"
		    android:checked="false"
		    android:clickable="true"
		    android:gravity="center"
		    android:padding="5dp"
		    android:text="@string/autoLogin" />

	</FrameLayout>

        <Button
            android:id="@+id/button3"
            style="@style/title_text_style"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/selector_orange_button_gradient"
            android:text="@string/login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >

            <TextView
                android:id="@+id/textView2"
                style="@style/title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/selector_textview"
                android:clickable="true"
                android:drawableRight="@drawable/ic_arrow"
                android:focusable="true"
                android:padding="12dp"
                android:text="@string/freeRegister"
                android:textColor="@color/orange"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="bottom"
        android:background="@drawable/selector_simple_press"
        android:clickable="true"
        android:orientation="vertical" >

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:background="@drawable/shadow_horizontal" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/userOtherAccount"
            android:textColor="#88333333"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>